gradients suck and other style changes

--- a/html5up-miniport/index.html
+++ b/html5up-miniport/index.html
@@ -37,21 +37,14 @@
 
 		<!-- Home -->
 			<div class="wrapper wrapper-style1 wrapper-first">
-				<article class="container" id="top">
-					<div class="row">
-						<div class="4u">
-							<span class="me image image-full"><img src="" alt="" /></span>
-						</div>
-						<div class="8u">
-							<header>
-								
-							</header>
-							<p>Makapen creates websites and web applications that are simple, smart, and delightful.<a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license/">CCA license</a>.</p>
-							<a href="#work" class="button button-big">Learn about what I do</a>
-						</div>
-					</div>
-				</article>
-			</div>
+                        <div class="8u makapenIntro">   
+							<h1>
+                            <img  src="images/mklogo.png" alt="Makapen Web Agency" />
+							</h1>
+							<h2>Creates websites and web applications that are simple, smart, and delightful!</h2>
+					</div></div>
+				
+
 
 		<!-- Work -->
 			<div class="wrapper wrapper-style2">
