--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 						<div class="row">
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://jimini.co" class="image image-full"><img src="images/cricket.png" alt="" /></a>
+									<a href="http://jimini.co" class="image image-full"><img id="origami-logo" src="images/cricket.png" alt="" /></a>
 									<h3><a href="http://flypixel.com/generic-smartphone/8949517882265310">Jimini</a></h3>
                                     <p>We helped launch the web's first OAAS platform (Oragami as a service). Use Jimini to send personalized oragami gifts.</p>
 								</article>
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="http://rencast.co" class="image image-full"><img src="images/rentcastlogo.png" alt="" /></a>
+									<a href="http://rencast.co" class="image image-full"><img id="rentcast-logo" src="images/rentcast.png" alt="" /></a>
 									<h3><a href="http://flypixel.com/n33">RentCast</a></h3>
 									<p>Helped build branding and launch page for RentCast, a local startup building rental pricing solution.</p>
 								</article>
